tests/ui/pattern/usefulness/tuple-struct-nonexhaustive.stderr
error[E0004]: non-exhaustive patterns: `Foo(..=0_isize, _)` and `Foo(3_isize.., _)` not covered
  --> $DIR/tuple-struct-nonexhaustive.rs:5:11
   |
LL |     match x {
   |           ^ patterns `Foo(..=0_isize, _)` and `Foo(3_isize.., _)` not covered
   |
note: `Foo` defined here
  --> $DIR/tuple-struct-nonexhaustive.rs:1:8
   |
LL | struct Foo(isize, isize);
   |        ^^^
   = note: the matched value is of type `Foo`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         Foo(2, b) => println!("{}", b),
LL +         Foo(..=0_isize, _) | Foo(3_isize.., _) => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
